--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,7 +18,10 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introMessage: |-
+    This is an uptime dashboard of various endpoints hosted by DIDx.
+    This status page is generated and maintained with **real-time** data from our [GitHub repository](https://github.com/didx-xyz/upptime).
+    No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: DIDx
       href: https://www.didx.co.za
