--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -19,8 +19,10 @@ status-website:
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: |-
-    This is an uptime dashboard of various endpoints hosted by DIDx.
-    This status page is generated and maintained with **real-time** data from our [GitHub repository](https://github.com/didx-xyz/upptime).
+    This is a status page of various endpoints hosted by DIDx.
+
+    This page is generated and maintained with **real-time** data from our [GitHub repository](https://github.com/didx-xyz/upptime).
+
     No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: DIDx
