--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,5 @@
-# Change these first
-owner: didx-xyz # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: didx-xyz
+repo: upptime
 
 assignees:
   - rblaine95
@@ -11,11 +10,9 @@ sites:
     url: https://trust-registry.didx.co.za/api/registry
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: upptime.didx.co.za
   baseUrl: /
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: https://avatars.githubusercontent.com/u/51539199
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: |-
