--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,7 +13,7 @@ status-website:
   cname: upptime.didx.co.za
   baseUrl: /
   logoUrl: https://avatars.githubusercontent.com/u/51539199
-  name: Upptime
+  name: did:Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: |-
     This is a status page of various endpoints hosted by DIDx.
@@ -22,13 +22,13 @@ status-website:
 
     No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
-    - title: DIDx
+    - title: Home
       href: https://www.didx.co.za
     - title: Status
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
-  theme: dark
+  theme: ocean
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
