--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -8,6 +8,7 @@ assignees:
 sites:
   - name: SSI Trust Registry
     url: https://trust-registry.didx.co.za/api/registry
+    icon: https://www.didx.co.za/assets/images/logo/favourite_icon.png
 
 status-website:
   cname: upptime.didx.co.za
