--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -21,7 +21,9 @@ status-website:
 
     This page is generated and maintained with **real-time** data from our [GitHub repository](https://github.com/didx-xyz/upptime).
 
-    No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+    No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime).
+
+    _This page is automatically updated on a best-effort basis every 5-30 minutes_
   navbar:
     - title: Home
       href: https://www.didx.co.za
